--- a/style/hockeys.css
+++ b/style/hockeys.css
@@ -1,11 +1,10 @@
 .img-div-one{
     background-image:linear-gradient(to right, rgba(19, 19, 24, 0.50), rgba(19, 19, 24, 0.50)), url(../Images/2.png);
 
-    border-radius: 20px;
-    padding: 30px 20px 20px 20px ;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
+    object-fit: cover;
     
 
 }
@@ -14,11 +13,9 @@
 .img-div-two{
     background-image:linear-gradient(to right, rgba(19, 19, 24, 0.50), rgba(19, 19, 24, 0.50)), url(../Images/3.png);
 
-    border-radius: 20px;
-    padding: 30px 20px 20px 20px ;
     background-size: cover;
     background-repeat: no-repeat;
-    object-fit: contain;
+    object-fit: cover;
     background-position: center;
 
 }
@@ -26,12 +23,9 @@
 .img-div-three{
     background-image:linear-gradient(to right, rgba(19, 19, 24, 0.50), rgba(19, 19, 24, 0.50)), url(../Images/4.png);
 
-    border-radius: 20px;
-    padding: 30px 20px 20px 20px ;
-    
     background-size: cover;
     background-repeat: no-repeat;
-    object-fit: contain;
+    object-fit: cover;
     background-position: center;
 
 }
